Added authentication in order service